Pull in playlist tracklists

--- a/src/stats.ipynb
+++ b/src/stats.ipynb
@@ -27,8 +27,15 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "### Get Spotify credentials"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -51,7 +58,55 @@
     ")\n",
     "r.raise_for_status()\n",
     "response = r.json()\n",
-    "token = response[\"access_token\"]"
+    "token = response[\"access_token\"]\n",
+    "headers = { \"Authorization\": f\"Bearer {token}\" }"
+   ]
+  },
+  {
+   "source": [
+    "### Get Song a Day playlist data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "playlists = { 2019: \"6xJjyO5AGrZkyGkWYXfUX8\", 2020: \"3iNn4yKx9PxpSVYfRXkK8i\" }\n",
+    "years = sorted(playlists.keys())\n",
+    "tracks = { year: [] for year in years }\n",
+    "\n",
+    "# For each year's playlist, grab tracks\n",
+    "for year in years:\n",
+    "    # Page through track list for the playlist\n",
+    "    next_url = f\"https://api.spotify.com/v1/playlists/{playlists[year]}/tracks\"\n",
+    "    while next_url:\n",
+    "        # Fetch the current page\n",
+    "        r = requests.get(next_url, headers=headers)\n",
+    "        r.raise_for_status()\n",
+    "        response = r.json()\n",
+    "        # Reshape each playlist item and add to our \"tracks\" list for the relevant year\n",
+    "        for playlist_item in response[\"items\"]:\n",
+    "            tracks[year].append({\n",
+    "                \"name\": playlist_item[\"track\"][\"name\"],\n",
+    "                \"id\": playlist_item[\"track\"][\"id\"],\n",
+    "                \"album_id\": playlist_item[\"track\"][\"album\"][\"id\"],\n",
+    "                \"album_name\": playlist_item[\"track\"][\"album\"][\"name\"],\n",
+    "                \"artists\": [\n",
+    "                    { \"name\": artist[\"name\"], \"id\": artist[\"id\"] }\n",
+    "                    for artist in playlist_item[\"track\"][\"artists\"]\n",
+    "                ],\n",
+    "                \"primary_artist_name\": playlist_item[\"track\"][\"artists\"][0][\"name\"],\n",
+    "                \"primary_artist_id\": playlist_item[\"track\"][\"artists\"][0][\"id\"],\n",
+    "                \"is_local\": playlist_item[\"is_local\"]\n",
+    "            })\n",
+    "        # Take note of the URL of the next page of playlist items\n",
+    "        next_url = response[\"next\"]"
    ]
   }
  ]
