Assign a date to each track

--- a/src/stats.ipynb
+++ b/src/stats.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -108,6 +108,38 @@
     "        # Take note of the URL of the next page of playlist items\n",
     "        next_url = response[\"next\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2019-12-31 00:00:00\n"
+    }
+   ],
+   "source": [
+    "# Assign a date to each track\n",
+    "from datetime import datetime, timedelta\n",
+    "for year in years:\n",
+    "    curr_date = datetime(year, 1, 1)\n",
+    "    for track in tracks[year]:\n",
+    "        track[\"date\"] = curr_date\n",
+    "        curr_date += timedelta(days=1)\n",
+    "\n",
+    "print(tracks[2019][-1][\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
