Include album images in tracks

--- a/src/stats.ipynb
+++ b/src/stats.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -97,6 +97,10 @@
     "                \"id\": playlist_item[\"track\"][\"id\"],\n",
     "                \"album_id\": playlist_item[\"track\"][\"album\"][\"id\"],\n",
     "                \"album_name\": playlist_item[\"track\"][\"album\"][\"name\"],\n",
+    "                \"album_images\": dict([\n",
+    "                    ({640: \"large\", 300: \"medium\", 64: \"small\"}[i[\"width\"]], i[\"url\"])\n",
+    "                    for i in playlist_item[\"track\"][\"album\"][\"images\"]\n",
+    "                ]),\n",
     "                \"artists\": [\n",
     "                    { \"name\": artist[\"name\"], \"id\": artist[\"id\"] }\n",
     "                    for artist in playlist_item[\"track\"][\"artists\"]\n",
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -119,7 +123,9 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "2019-12-31 00:00:00\n"
+     "text": [
+      "{'name': 'Northstar (feat. Vic Mensa & Maceo Haymes)', 'id': '2rQo6riaUQ9KRzDgPLqeWx', 'album_id': '1H2Y4lomFedlGP6yEd15cT', 'album_name': 'Opia', 'album_images': {'large': 'https://i.scdn.co/image/ab67616d0000b2732fe16c52fdb5c238f66586c1', 'medium': 'https://i.scdn.co/image/ab67616d00001e022fe16c52fdb5c238f66586c1', 'small': 'https://i.scdn.co/image/ab67616d000048512fe16c52fdb5c238f66586c1'}, 'artists': [{'name': 'Malcolm London', 'id': '1ikfT4dtC0eCVk4TZdfHGO'}], 'primary_artist_name': 'Malcolm London', 'primary_artist_id': '1ikfT4dtC0eCVk4TZdfHGO', 'is_local': False, 'date': datetime.datetime(2019, 12, 31, 0, 0)}\n"
+     ]
     }
    ],
    "source": [
@@ -131,7 +137,7 @@
     "        track[\"date\"] = curr_date\n",
     "        curr_date += timedelta(days=1)\n",
     "\n",
-    "print(tracks[2019][-1][\"date\"])"
+    "print(tracks[2019][-1])"
    ]
   },
   {
